Fix special cell

--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1251c9f4",
    "metadata": {
     "editable": true,
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "04ac7f2d",
    "metadata": {
     "editable": true,
@@ -47,7 +47,25 @@
    "outputs": [],
    "source": [
     "input_stac_collection_file = '/unity/ads/users/jfahlen/20230620t084426/catalog_local.json' # type: stage-in\n",
-    "output_stac_catalog_dir    = '/unity/ads/users/jfahlen/20230620t084426/'                    # type: stage-out\n",
+    "output_stac_catalog_dir    = '/unity/ads/users/jfahlen/20230620t084426/'                    # type: stage-out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cf866e02-08f8-4c7a-bf10-c14ab8601953",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/unity/ads/users/jfahlen/20230620t084426/emit20230620t084426_ch4_mf\n",
+      "/unity/ads/users/jfahlen/20230620t084426/emit20230620t084426_ch4_mf.hdr\n"
+     ]
+    }
+   ],
+   "source": [
     "local_output_location      = output_stac_catalog_dir + 'emit20230620t084426'\n",
     "\n",
     "# Filename written to the working directory\n",
