--- a/process.ipynb
+++ b/process.ipynb
@@ -206,9 +206,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [conda env:isofit_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-isofit_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -220,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
