Add slash to path

--- a/process.ipynb
+++ b/process.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "local_output_location      = output_stac_catalog_dir + 'emit20230620t084426'\n",
+    "local_output_location      = os.path.join(output_stac_catalog_dir,'emit20230620t084426')\n",
     "\n",
     "# Filename written to the working directory\n",
     "#summary_table_filename = \"summary_table.txt\"\n",
