Fix static input paths

--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1251c9f4",
    "metadata": {
     "editable": true,
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "04ac7f2d",
    "metadata": {
     "editable": true,
@@ -52,19 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cf866e02-08f8-4c7a-bf10-c14ab8601953",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/unity/ads/users/jfahlen/20230620t084426/emit20230620t084426_ch4_mf\n",
-      "/unity/ads/users/jfahlen/20230620t084426/emit20230620t084426_ch4_mf.hdr\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "local_output_location      = os.path.join(output_stac_catalog_dir,'emit20230620t084426')\n",
     "\n",
@@ -108,7 +99,8 @@
     "inp_collection = Collection.from_stac(input_stac_collection_file)\n",
     "data_filenames = inp_collection.data_locations()\n",
     "\n",
-    "cmd = 'aws s3 cp s3://emit-dev-unity-data/emit_ghg_bucket/dataset_ch4_full.hdf5 ./'\n",
+    "os.mkdir('~/output/')\n",
+    "cmd = 'aws s3 cp s3://emit-dev-unity-data/emit_ghg_bucket/dataset_ch4_full.hdf5 ~/output/'\n",
     "subprocess.call(cmd, shell = True)\n",
     "\n",
     "#print(data_filenames)"
