Fix dataset_hdf5 input

--- a/process.ipynb
+++ b/process.ipynb
@@ -47,7 +47,10 @@
    "outputs": [],
    "source": [
     "input_stac_collection_file = '/unity/ads/users/jfahlen/20230620t084426/catalog_local.json' # type: stage-in\n",
-    "output_stac_catalog_dir    = '/unity/ads/users/jfahlen/20230620t084426/'                    # type: stage-out"
+    "output_stac_catalog_dir    = '/unity/ads/users/jfahlen/20230620t084426/'                    # type: stage-out\n",
+    "\n",
+    "#For eventual catalogging of this file in the unity environment\n",
+    "output_collection=\"example-emit_ghg_jay\""
    ]
   },
   {
@@ -64,9 +67,6 @@
     "\n",
     "output_mf_filename = local_output_location + '_ch4_mf'\n",
     "output_mf_hdr_filename = local_output_location + '_ch4_mf.hdr'\n",
-    "\n",
-    "#For eventual catalogging of this file in the unity environment\n",
-    "output_collection=\"example-emit_ghg_jay\"\n",
     "\n",
     "print(output_mf_filename)\n",
     "print(output_mf_hdr_filename)"
@@ -99,8 +99,7 @@
     "inp_collection = Collection.from_stac(input_stac_collection_file)\n",
     "data_filenames = inp_collection.data_locations()\n",
     "\n",
-    "os.mkdir('~/output/')\n",
-    "cmd = 'aws s3 cp s3://emit-dev-unity-data/emit_ghg_bucket/dataset_ch4_full.hdf5 ~/output/'\n",
+    "cmd = f'aws s3 cp s3://emit-dev-unity-data/emit_ghg_bucket/dataset_ch4_full.hdf5 {output_stac_catalog_dir}/'\n",
     "subprocess.call(cmd, shell = True)\n",
     "\n",
     "#print(data_filenames)"
@@ -153,7 +152,7 @@
     "    \n",
     "# Create a Dataset for the collection\n",
     "dataset = Dataset(\n",
-    "    name=output_mf_filename + '_dataset', \n",
+    "    name=output_mf_filename, \n",
     "    collection_id=out_collection.collection_id, \n",
     "    start_time=datetime.utcnow().replace(tzinfo=timezone.utc).isoformat(), \n",
     "    end_time=datetime.utcnow().replace(tzinfo=timezone.utc).isoformat(),\n",
