--- a/process.ipynb
+++ b/process.ipynb
@@ -50,7 +50,7 @@
     "output_stac_catalog_dir    = '/unity/ads/users/jfahlen/20230620t084426/'                    # type: stage-out\n",
     "\n",
     "#For eventual catalogging of this file in the unity environment\n",
-    "output_collection=\"example-emit_ghg_jay\""
+    "output_collection=\"urn:nasa:unity:emit:dev:emit_ghg_test___1\""
    ]
   },
   {
