Use basename in Dataset stac out

--- a/process.ipynb
+++ b/process.ipynb
@@ -152,7 +152,7 @@
     "    \n",
     "# Create a Dataset for the collection\n",
     "dataset = Dataset(\n",
-    "    name=output_mf_filename, \n",
+    "    name=os.path.basename(output_mf_filename), \n",
     "    collection_id=out_collection.collection_id, \n",
     "    start_time=datetime.utcnow().replace(tzinfo=timezone.utc).isoformat(), \n",
     "    end_time=datetime.utcnow().replace(tzinfo=timezone.utc).isoformat(),\n",
