Fix output path names

--- a/execute_app_pack_gen.ipynb
+++ b/execute_app_pack_gen.ipynb
@@ -82,9 +82,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "isofit_env",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "isofit_env"
   },
   "language_info": {
    "codemirror_mode": {
