--- a/process.ipynb
+++ b/process.ipynb
@@ -54,25 +54,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf866e02-08f8-4c7a-bf10-c14ab8601953",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_output_location      = os.path.join(output_stac_catalog_dir,'emit20230620t084426')\n",
-    "\n",
-    "# Filename written to the working directory\n",
-    "#summary_table_filename = \"summary_table.txt\"\n",
-    "\n",
-    "output_mf_filename = local_output_location + '_ch4_mf'\n",
-    "output_mf_hdr_filename = local_output_location + '_ch4_mf.hdr'\n",
-    "\n",
-    "print(output_mf_filename)\n",
-    "print(output_mf_hdr_filename)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "60b7fa38",
    "metadata": {
@@ -118,11 +99,20 @@
     "l1b_rad_filename = [x for x in data_filenames if 'L1B_RAD_001' in x and '.nc' in x][0]\n",
     "l1b_obs_filename = [x for x in data_filenames if 'L1B_OBS_001' in x and '.nc' in x][0]\n",
     "l2a_mask_filename = [x for x in data_filenames if 'L2A_MASK_001' in x and '.nc' in x][0]\n",
-    "#print(l1b_rad_filename,l1b_obs_filename,l2a_mask_filename)\n",
+    "\n",
+    "fid = 'emit' + l1b_rad_filename.strip().split('/')[-1].split('_')[4]\n",
+    "\n",
+    "local_output_location = os.path.join(output_stac_catalog_dir, fid)\n",
+    "\n",
+    "output_mf_filename = local_output_location + '_ch4_mf'\n",
+    "output_mf_hdr_filename = local_output_location + '_ch4_mf.hdr'\n",
+    "\n",
+    "#Uncomment\n",
+    "#print('File names used: ', l1b_rad_filename,l1b_obs_filename,l2a_mask_filename)\n",
     "run_cmd = f'python ghg_process.py {l1b_rad_filename} {l1b_obs_filename} {l1b_rad_filename} junk ' + \\\n",
     "          f'{l2a_mask_filename} {l2a_mask_filename} {local_output_location} ' + \\\n",
     "          f'--state_subs {l2a_mask_filename} --overwrite'\n",
-    "#print(run_cmd)\n",
+    "##print(run_cmd)\n",
     "subprocess.call(run_cmd, shell = True)"
    ]
   },
@@ -197,9 +187,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
