Updates for apply_glt

--- a/process.ipynb
+++ b/process.ipynb
@@ -106,13 +106,15 @@
     "\n",
     "output_mf_filename = local_output_location + '_ch4_mf'\n",
     "output_mf_hdr_filename = local_output_location + '_ch4_mf.hdr'\n",
+    "output_mf_ort_filename = local_output_location + '_ch4_mf_ort'\n",
+    "output_mf_ort_hdr_filename = local_output_location + '_ch4_mf_ort.hdr'\n",
     "\n",
     "#Uncomment\n",
     "#print('File names used: ', l1b_rad_filename,l1b_obs_filename,l2a_mask_filename)\n",
-    "run_cmd = f'python ghg_process.py {l1b_rad_filename} {l1b_obs_filename} {l1b_rad_filename} junk ' + \\\n",
+    "run_cmd = f'python ghg_process.py {l1b_rad_filename} {l1b_obs_filename} {l1b_rad_filename} {l1b_rad_filename} ' + \\\n",
     "          f'{l2a_mask_filename} {l2a_mask_filename} {local_output_location} ' + \\\n",
     "          f'--state_subs {l2a_mask_filename} --overwrite'\n",
-    "##print(run_cmd)\n",
+    "print(run_cmd)\n",
     "subprocess.call(run_cmd, shell = True)"
    ]
   },
@@ -152,6 +154,8 @@
     "# Add output file(s) to the dataset\n",
     "dataset.add_data_file(DataFile(\"ENVI\", output_mf_filename, [\"data\"]))\n",
     "dataset.add_data_file(DataFile(\"ENVI_hdr\", output_mf_hdr_filename, [\"data\"]))\n",
+    "dataset.add_data_file(DataFile(\"ENVI\", output_mf_ort_filename, [\"data\"]))\n",
+    "dataset.add_data_file(DataFile(\"ENVI_hdr\", output_mf_ort_hdr_filename, [\"data\"]))\n",
     "\n",
     "\n",
     "#when we run \"to_stac\" below, this file  will be generated. this needs to be added to the stac file itself for future reference.\n",
@@ -187,9 +191,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "ipykernel",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "ipykernel"
   },
   "language_info": {
    "codemirror_mode": {
